# rust_misc_utils

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  bors.toml
.github/: dependabot.yml
.github/workflows/: audit.yaml  ci.yaml  publish-crates-io.yaml
src/: async_fs.rs  chronoext.rs  error.rs  fs.rs  lib.rs  minmax.rs  path.rs
tests/: jsonl.rs  max.rs  min.rs  read-write.rs
tests/data/: jsonl-broken-json.txt  jsonl-complex-type.txt  jsonl.xz  lorem.txt  lorem.txt.bz2  lorem.txt.default.bz2  lorem.txt.default.xz  lorem.txt.xz
