[package]
authors = ["Jonas Bushart"]
description = "A small collection of convenient and utility functions developed for personal use."
documentation = "https://docs.rs/misc_utils/"
edition = "2018"
keywords = ["misc", "utils", "convenience"]
license = "Unlicense"
name = "misc_utils"
readme = "README.md"
repository = "https://github.com/jonasbb/rust_misc_utils"
version = "3.0.0"

[lib]
name = "misc_utils"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.32"
bzip2 = {version = "0.4.1", optional = true}
flate2 = {version = "1.0", optional = true}
log = "0.4"
num-traits = "0.2.6"
serde = {version = "1.0", optional = true}
serde_json = {version = "1.0", optional = true}
thiserror = "1.0.16"
xz2 = {version = "0.1", optional = true}

[features]
default = [
    "file-gz",
    "file-xz",
    "jsonl",
]
file-bz2 = ["bzip2"]
file-gz = ["flate2"]
file-xz = ["xz2"]
# A nice multi-threaded JSONL iterator which puts file reading and JSON parsing into its own
# threads.
jsonl = ["serde", "serde_json"]

[dev-dependencies]
pretty_assertions = "0.6"
# Optional dev-dependencies are not a thing :(
serde_derive = "1.0"
tempfile = "3.0"
version-sync = "0.9.0"

[package.metadata.docs.rs]
# https://github.com/onur/docs.rs/pull/131
all-features = true
default-target = "x86_64-unknown-linux-gnu"
