[package]
authors = ["Jonas Bushart"]
description = "A small collection of convenient and utility functions developed for personal use."
documentation = "https://docs.rs/misc_utils/"
edition = "2018"
keywords = ["misc", "utils", "convenience"]
license = "Unlicense"
name = "misc_utils"
readme = "README.md"
repository = "https://github.com/jonasbb/rust_misc_utils"
version = "4.0.1"

[lib]
name = "misc_utils"
path = "src/lib.rs"

[features]
async-fs = [
    "tokio",
    "tokio/fs",
    "tokio/rt",
]
default = [
    "file-gz",
    "file-xz",
    "jsonl",
]
file-bz2 = ["bzip2"]
file-gz = ["flate2"]
file-xz = ["xz2"]
# A nice multi-threaded JSONL iterator which puts file reading and JSON parsing into its own
# threads.
jsonl = ["serde", "serde_json"]

[dependencies]
bzip2 = {version = "0.4.1", optional = true}
flate2 = {version = "1.0", optional = true}
log = "0.4"
num-traits = "0.2.6"
serde = {version = "1.0", optional = true}
serde_json = {version = "1.0", optional = true}
thiserror = "1.0.16"
tokio.default-features = false
tokio.optional = true
tokio.version = "1.17"
xz2 = {version = "0.1", optional = true}

[dev-dependencies]
anyhow = "1.0.34"
pretty_assertions = "1.0"
# Optional dev-dependencies are not a thing :(
serde_derive = "1.0"
tempfile = "3.0"
version-sync = "0.9.2"

[package.metadata.docs.rs]
# https://github.com/onur/docs.rs/pull/131
all-features = true
default-target = "x86_64-unknown-linux-gnu"
